fix: make background stationary on mobile Safari

--- a/src/index.scss
+++ b/src/index.scss
@@ -6,7 +6,7 @@ $shadow-color: rgba(0, 0, 0, 0.6);
 $border-radius: 5px;
 
 html, body {
-  height: 100%;
+  height: 100vh;
   margin: 0;
   display: flex;
   flex-direction: column;
